--- a/app/src/main/res/layout/activity_spot.xml
+++ b/app/src/main/res/layout/activity_spot.xml
@@ -1,13 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    <TextView
+        android:id="@+id/txtTitle"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:text="中原景點推薦"
+        android:textSize="22sp"
         android:gravity="center"
-        android:text="中原景點功能建置中"
-        android:textSize="20sp" />
+        android:padding="16dp"
+        android:textStyle="bold"/>
 
+    <ListView
+        android:id="@+id/listViewSpots"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 </LinearLayout>
