--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -47,7 +47,7 @@
 
     <!-- 課表查詢 -->
     <Button
-        android:id="@+id/btnSchedule"
+        android:id="@+id/btnCourse"
         style="@style/AnimatedButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -68,7 +68,7 @@
         android:background="@drawable/button_bg"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btnSchedule"
+        app:layout_constraintTop_toBottomOf="@id/btnCourse"
         android:layout_marginTop="16dp"/>
 
     <!-- 查詢行政單位 -->
