--- a/app/src/main/res/layout/activity_admin_search.xml
+++ b/app/src/main/res/layout/activity_admin_search.xml
@@ -1,14 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    android:padding="16dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="16dp">
+    android:focusableInTouchMode="true"
+    android:focusable="true">
 
     <AutoCompleteTextView
-        android:id="@+id/autoSearch"
+        android:id="@+id/autoCompleteTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="請輸入行政單位" />
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        android:hint="輸入關鍵字"
+        android:minHeight="48dp"
+        tools:ignore="HardcodedText" />
 
+    <ListView
+        android:id="@+id/listViewDetails"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 </LinearLayout>
